Take the feedback of SonarQube analysis